--- a/99cats-2/app/views/cats/_req_tr.html.erb
+++ b/99cats-2/app/views/cats/_req_tr.html.erb
@@ -1,12 +1,21 @@
 <tr>
   <td><%= req.start_date %></td>
   <td><%= req.end_date %></td>
+  <td><%= req.requester.username %></td>
   <td>
-    <% if req.pending? %>
+    <% if req.pending? && @cat.owner == current_user%>
       <form action="<%= approve_cat_rental_request_url(req) %>" method="POST">
+        <input
+        type="hidden"
+        name="authenticity_token"
+        value="<%= form_authenticity_token %>">
         <input type="submit" value="Approve" />
       </form>
       <form action="<%= deny_cat_rental_request_url(req) %>" method="POST">
+        <input
+          type="hidden"
+          name="authenticity_token"
+          value="<%= form_authenticity_token %>">
         <input type="submit" value="Deny" />
       </form>
     <% else %>
