--- a/99cats-2/app/views/cats/show.html.erb
+++ b/99cats-2/app/views/cats/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/errors' %>
 <h1><%= @cat.name %></h1>
 
 <table>
@@ -20,6 +21,7 @@
   <tr>
     <th>Start Date</th>
     <th>End Date</th>
+    <th>Requester</th>
     <th>Status</th>
   </tr>
   <% @cat.rental_requests.order('start_date').each do |req| %>
