--- a/99cats-2/app/views/cats/show.html.erb
+++ b/99cats-2/app/views/cats/show.html.erb
@@ -24,7 +24,7 @@
     <th>Requester</th>
     <th>Status</th>
   </tr>
-  <% @cat.rental_requests.order('start_date').each do |req| %>
+  <% @cat.rental_requests.includes(:requester).order('start_date').each do |req| %>
     <%= render 'req_tr', req: req %>
   <% end %>
 </table>
